@@ -1,3 +1,12 @@
+Wed May 15 18:58:17 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* gc.c (newobj): rename to `newobj_of' and accept additional
+	  three parameters v1, v2, v3. newobj_of() do OBJSETUP() and
+	  fill values with v1, v2, v3.
+
+	* gc.c (rb_data_object_alloc, rb_data_typed_object_alloc): 
+	  use newobj_of().
+
 Wed May 15 17:55:49 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in (RUBY_PLATFORM): move to config.h as needed by
